# FabSoften

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FabSoften.NET.sln  README.md  _a_d_f_8cpp.html  _a_d_f_8h.html  _a_d_f_8h_source.html  _beautifier_8cpp.html  _beautifier_8h.html  _beautifier_8h_source.html  _binary_skin_mask_8cpp.html  _blemish_remover_8cpp.html  _blemish_remover_8h.html  _blemish_remover_8h_source.html  _core_8cpp.html  _core_8h.html  _core_8h_source.html  _demo_8cpp.html  _face_landmark_detection_8cpp.html  _face_landmark_detector_8cpp.html  _face_landmark_detector_8h.html  _face_landmark_detector_8h_source.html  _face_region_8cpp.html  _face_region_8h.html  _face_region_8h_source.html  _guided_filter_8cpp.html  _guided_filter_8h.html  _guided_filter_8h_source.html  _lib_fab_soften_8cpp.html  _lib_fab_soften_8h.html  _lib_fab_soften_8h_source.html  _lib_fab_soften_a_p_i_8cpp.html  _platform_8h.html  _platform_8h_source.html  _r_e_a_d_m_e_8md.html  _sanity_check_8cpp.html  _sanity_check_8h.html  _sanity_check_8h_source.html  (+124 more)
.github/workflows/: CI.yml
FabSoften.NET/: Form1.Designer.cs  Form1.cs  Program.cs
assets/: README.md
cmake/: install_config.cmake  options.cmake  utils.cmake
docs/: CMakeLists.txt
examples/: CMakeLists.txt  README.md
examples/ADF/: ADF.cpp  ADF.h  CMakeLists.txt  README.md
examples/BinarySkinMask/: BinarySkinMask.cpp  CMakeLists.txt  README.md
examples/Demo/: CMakeLists.txt  Demo.cpp
examples/FaceLandmarkDetection/: CMakeLists.txt  FaceLandmarkDetection.cpp  README.md  VisualStudio.md  face_landmark_detection.cpp
examples/LibFabSoftenAPI/: CMakeLists.txt  LibFabSoftenAPI.cpp
examples/SkinMapGeneration/: CMakeLists.txt  README.md  SkinMapGeneration.cpp
examples/SpotConcealment/: CMakeLists.txt  README.md  SpotConcealment.cpp
include/: CMakeLists.txt
include/fabsoften/: Beautifier.h  BlemishRemover.h  CMakeLists.txt  FaceLandmarkDetector.h  FaceRegion.h  GuidedFilter.h  LibFabSoften.h  SkinMaskGenerator.h  libfabsoften.h  platform.h
models/: README.md
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+34 more)
src/: Beautifier.cpp  BlemishRemover.cpp  CMakeLists.txt  FaceLandmarkDetector.cpp  FaceRegion.cpp  GuidedFilter.cpp  LibFabSoften.cpp  SkinMaskGenerator.cpp
tests/: CMakeLists.txt
tests/ADF/: ADF.cpp  ADF.h  CMakeLists.txt
tests/Core/: CMakeLists.txt  Core.cpp  Core.h
tests/SanityCheck/: CMakeLists.txt  SanityCheck.cpp  SanityCheck.h  sanity_check.cpp
tools/: CMakeLists.txt  Soften.cpp
