find_package(Doxygen OPTIONAL_COMPONENTS dot mscgen dia)

if (DOXYGEN_FOUND)
    set(DOXYGEN_GENERATE_LATEX NO)
    set(DOXYGEN_EXTRACT_ALL YES)
    set(DOXYGEN_EXTRACT_PACKAGE YES)
    set(DOXYGEN_USE_MDFILE_AS_MAINPAGE ../README.md)
    set(DOXYGEN_FILE_PATTERNS *.c *.cpp *.h *.hpp README.md)
    set(DOXYGEN_EXCLUDE ${PROJECT_SOURCE_DIR}/build)
    set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/docs)
    doxygen_add_docs(FabSoftenDocs . WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
else()
    message(WARNING "Doxygen is not found. Skip building docs...")
endif()